# memory_resource

./: CMakeLists.txt  README.md
include/: memory_resource  memory_resource.hpp
src/: memory_resource.cpp
